# curtailing

./: .env.sample  .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
migrations/: 20240507172215_init.sql
src/: env_config.rs  error.rs  links_db.rs  main.rs  model.rs
src/web/: mod.rs  routes_api.rs
