[package]
name = "curtailing"
version = "0.1.0"
edition = "2021"
authors = [
    "Andy Smith <andy'strugglers.net>"
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.sqlx]
version = "0.7"
features = [
    "sqlite",
    "runtime-tokio",
]

[dependencies.tokio]
version = "1.37"
features = [
    "full",
]

[dependencies.tower-http]
version = "0.5"
features = [
    "fs",
]

[dependencies.uuid]
version  = "1.8.0"
features = [
    "v4",
    "v7",
    "fast-rng",
]

[dependencies]
axum = "0.7"
bs58 = "0.5" # base58
dotenvy = "0.15"
envy = "0.4"
regex = "1.10"
serde_json = "1.0"
strum_macros = "0.26"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
